add Client project files
add day availability and make navbar for general users and specific one for login users and add contact page with send messages forms with send message by mail

--- a/Client/src/main/webapp/CSS/main.css
+++ b/Client/src/main/webapp/CSS/main.css
@@ -65,10 +65,9 @@ img {
 }
 
 .tm-footer {
+
 	background: #fff;
 	text-align: center;
-	padding: 20px;
-	margin-top: 10px;
 }
 
 
@@ -293,7 +292,7 @@ canvas {
 }
 
 .themeColor {
-	background-image: linear-gradient(#fff, #ddf6ff);
+	/background-image: linear-gradient(#fff, #ddf6ff);
 }
 
 .themeColor-nav {
